[package]
edition = "2021"
name = "easynetwork"
version = "0.1.0"

[features]
json = ["dep:serde", "dep:serde_json"]
nightly = []

[dependencies]
serde = {version = "^1.0.210", optional = true}
serde_json = {version = "^1.0.128", optional = true}

[dev-dependencies]
serde = {version = "*", features = ["derive"]}
